test/testdata/classes/methods/instance/invalid_property_access_error.lox
class Foo {
  bar() {}
}
Foo().bar.x; // error: property access is not valid for 'function' object
